Implemented second collection functions and routes
