# routes/index.js
@@ -2,5 +2,6 @@ const router = require("express").Router();
 
 router.use("/users", require("./users"));
 router.use("/swagger", require("./swagger"));
+router.use("/colors", require("./colors"))
 
 module.exports = router;
